// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Skeleton Component Change Theme 1`] = `
<div
  class="item"
>
  <div
    class="item__photo"
  >
    <span>
      <span
        class="pu-skeleton"
        style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(230, 243, 253);"
      >
        ‌
      </span>
    </span>
  </div>
   
  <div
    class="item__meta"
  >
    <div
      class="item__title"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(230, 243, 253);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__info"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(230, 243, 253);"
        >
          ‌
        </span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(230, 243, 253);"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Skeleton Component Default 1`] = `
<div
  class="item"
>
  <div
    class="item__photo"
  >
    <span>
      <span
        class="pu-skeleton"
        style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(238, 238, 238);"
      >
        ‌
      </span>
    </span>
  </div>
   
  <div
    class="item__meta"
  >
    <div
      class="item__title"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__info"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Skeleton Component Use with list 1`] = `
<div
  class="list"
  style="width: 500px;"
>
  <div
    class="item"
  >
    <div
      class="item__photo"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__meta"
    >
      <div
        class="item__title"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
       
      <div
        class="item__info"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      class="item__photo"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__meta"
    >
      <div
        class="item__title"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
       
      <div
        class="item__info"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      class="item__photo"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__meta"
    >
      <div
        class="item__title"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
       
      <div
        class="item__info"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      class="item__photo"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__meta"
    >
      <div
        class="item__title"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
       
      <div
        class="item__info"
      >
        <span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
          <span
            class="pu-skeleton"
            style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Skeleton Component Use with v-if 1`] = `
<div
  class="item"
>
  <div
    class="item__photo"
  >
    <span>
      <span
        class="pu-skeleton"
        style="animation: SkeletonLoading 1.5s ease-in-out infinite; height: 50px; border-radius: 50%; background-color: rgb(238, 238, 238);"
      >
        ‌
      </span>
    </span>
  </div>
   
  <div
    class="item__meta"
  >
    <div
      class="item__title"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
     
    <div
      class="item__info"
    >
      <span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
        <span
          class="pu-skeleton"
          style="animation: SkeletonLoading 1.5s ease-in-out infinite; background-color: rgb(238, 238, 238);"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</div>
`;
